workspace_dc1/schema-registry/schema-reg-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: schema-registry
  name: schema-registry
spec:
  ports:
  - port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: schema-registry
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
